GNOME Bugzilla – Bug 695958
"Set as Wallpaper" – crashes because of missing "draw-background" in schema
Last modified: 2013-03-22 15:33:07 UTC
When I try to use the "Set as Wallpaper" context menu item, Nautilus crashes with this message: (nautilus:11447): GLib-GIO-ERROR **: Settings schema 'org.gnome.desktop.background' does not contain a key named 'draw-background' This key was removed from gsettings-desktop-schemas 3.7.91 with comment: commit a59b45e766a2b3732b3bd2473ee5fbe7607a7f75 Author: Bastien Nocera <hadess@hadess.net> AuthorDate: Thu Feb 21 12:19:20 2013 +0100 schemas: Remove unused "draw-background" key Its only user, gnome-desktop, doesn't use it anymore. nautilus 3.7.91-26-g89bef22 gnome-desktop 3.7.90-31-gfac5d33 gsettings-desktop-schemas 3.7.91
Pushed a fix for this to git master, thanks for the report.
*** Bug 694546 has been marked as a duplicate of this bug. ***
*** Bug 696390 has been marked as a duplicate of this bug. ***