view: don't reference org.gnome.desktop.background draw-background

The key has been removed in gnome-desktop, and attempting to use it will
trigger an assertion.

https://bugzilla.gnome.org/show_bug.cgi?id=695958